--- a/ApiiCollabdev/pom.xml
+++ b/ApiiCollabdev/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>spring-security-oauth2-jose</artifactId>
 			<version>6.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
