--- a/ApiiCollabdev/src/main/resources/application.properties
+++ b/ApiiCollabdev/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ApiiCollabdev
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/collabdevapi
+spring.datasource.url=jdbc:mysql://localhost:3306/api_spring
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=@tuwindi2024
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
