--- a/ApiiCollabdev/src/main/resources/application.properties
+++ b/ApiiCollabdev/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=ApiiCollabdev
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/collabdevapi
+spring.datasource.url=jdbc:mysql://localhost:3306/apicollabdev?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-server.port=8180
+server.port=8181
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
